-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.0
-
None
-
-
77e577592e64ab9b099de09c281140c60c898df7 (qt/qtquickcontrols2/5.15)
https://codereview.qt-project.org/c/qt/qt5/+/273189 Update submodules on '5.15' in qt5
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1568271274
agent:2019/09/12 07:02:13 build.go:220: qquickstackelement.cpp:213:82: error: too few arguments to function call, expected 6, have 4 agent:2019/09/12 07:02:13 build.go:220: QQmlComponentPrivate::setInitialProperties(v4, qmlContext, qmlObject, ipv); agent:2019/09/12 07:02:13 build.go:220: ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ agent:2019/09/12 07:02:13 build.go:220: /home/qt/work/install/include/QtQml/5.15.0/QtQml/private/qqmlcomponent_p.h:90:5: note: 'setInitialProperties' declared here agent:2019/09/12 07:02:13 build.go:220: static void setInitialProperties(QV4::ExecutionEngine *engine, QV4::QmlContext *qmlContext, const QV4::Value &o, const QV4::Value &v, RequiredProperties &requiredProperties, QObject *createdComponent); agent:2019/09/12 07:02:13 build.go:220: ^ agent:2019/09/12 07:02:14 build.go:220: 1 error generated.
For Gerrit Dashboard: QTBUG-78252 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
273776,5 | QQuickStackElemnt: fix compilation | 5.15 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
273789,4 | Increment Q_QML_PRIVATE_API_VERSION | 5.15 | qt/qtdeclarative | Status: MERGED | +2 | 0 |