Increment  Q_QML_PRIVATE_API_VERSION

The required property API change broke private API which QQC2 relied on

Task-number: QTBUG-78252
Change-Id: Ia8832396f984301e709381fde43035c8da61d149
Reviewed-by: Liang Qi <liang.qi@qt.io>